OOP: Ensure to clear tiles when needed even if no display items.

This patch ensures that we don't early out under requires_clear when
doing OOP raster. If we early out, and we were doing a partial raster,
then we might end up with previous content on the texture.

R=enne@chromium.org, piman@chromium.org

Bug: 901897
Change-Id: I9e74e7f5b04d14385b733df50b08e027f5e6d1d3
Reviewed-on: https://chromium-review.googlesource.com/c/1335662
Commit-Queue: vmpstr <vmpstr@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608391}
Former-commit-id: ac3cbdf51a653088dfd3ee377192f63510b66e0b